2024-05-20T08:16:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9155688374 # 289
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-20
* notice: last 14d: unq all: 6 22
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 918 1669
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 919 1670
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-20]

2024-05-20T00:56:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9151873680 # 288
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-20
* notice: last 14d: unq all: 6 21
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 918 1668
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 918 1669
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-05-19]

2024-05-19T08:14:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9146208022 # 286
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
* notice: last 14d: unq all: 6 20
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 917 1667
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 918 1668
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-19]

2024-05-19T00:59:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9143886796 # 285