@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-20T08:16:14Z",
+  "timestamp" : "2024-05-21T08:15:47Z",
   "count_outdated" : 1648,
   "uniques_outdated" : 904,
-  "count" : 1670,
-  "uniques" : 919,
+  "count" : 1673,
+  "uniques" : 921,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-21T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
