@@ -1,6 +1,6 @@
 {
-  "count": 22,
-  "uniques": 6,
+  "count": 25,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2024-05-20T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-21T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
